--- a/lab_1/pom.xml
+++ b/lab_1/pom.xml
@@ -84,11 +84,11 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.6</version>
-	</dependency>
+	</dependency>-->
 	</dependencies>
 
 	<build>
